2012-11-16  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dt_print_aggdata): Move to...
	* libdtrace/dtrace.h (dtrace_print_aggdata): ... here, and rename.
	Add names to all unnamed arguments.
	* libdtrace/dt_aggrecate.c (dtrace_aggregate_print): Adjust.
	* libdtrace/dt_consume.c (dt_print_aggs): Likewise.
	(dt_print_agg): Likewise.

	* libdtrace/dt_options.c (dt_opt_getenv_prefix): New, get an
	env var with a given prefix and upcased option name.
	(dtrace_setoptenv): New function, set options from applicable
	env vars.
	* libdtrace/dtrace.h: Declare it.
	* libdtrace/libdtrace.ver: Export it.
	* cmd/dtrace.c (main): Use it.
	* cmd/dtrace.1: Document all useful env vars.

	* cmd/dtrace.c (DTRACE_OPTSTR): Remove -t.
	(usage): Likewise.
	(main): Likewise.  Respect _DTRACE_TESTING instead.
	* runtest.sh: Export DTRACE_OPT_SYSLIBDIR and _DTRACE_TESTING
	instead of using the undocumented -t option.

2012-11-12  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_symtab.c (DT_ST_PACKED): Use 0x02, not 0x03, so
	that flag testing works.
	(dt_symbol): Make dts_name a union with string and offset fields.
	(dt_symtab): New field dtst_strtab.
	(dt_symbol_sort_cmp): Adjust string field name.
	(dt_symbol_insert): Likewise.
	(dt_symtab_destroy): Likewise. Free the strtab; free the symbol
	name only if not packed.
	(dt_symbol_by_name): Look in the string table if packed.
	(dt_symbol_name): Likewise.
	(dt_symtab_pack): Do nothing if already packed.  Construct the
	string table.
	* libdtrace/dt_module.c (dtrace_update): Pack the symbol tables.

	* libdtrace/dt_module.c (dtrace_addr_range_merge): New function,
	merges adjacent address range entries.
	(dtrace_update): Use it after sorting the address ranges.

	Warning police.

	* libdtrace/dt_aggregate.c (dt_aggregate_valcmp): If there are no
	aggregate records, return 0, since two nonexistent aggregate
	records are by definition equal to each other.
	* libdtrace/dt_pid.c (dt_pid_usdt_mapping): #if out the variable